--- a/style.css
+++ b/style.css
@@ -59,14 +59,14 @@ p {
 		margin-right: auto;
 		width: 50%;  
   }
-  table, th, td {
+  /* table, th, td {
     border: 5px solid black;
     border-collapse: collapse;
     height: 50px;
 	padding: 15px;
 	text-align: center;
 	color: #FFEB3B;
-  }
+  } */
   @media print {  
 	.header { 
 	  position: static;
